--- a/Code/Dimensionality Reduction/PCA_Train_Set_Plotting.ipynb
+++ b/Code/Dimensionality Reduction/PCA_Train_Set_Plotting.ipynb
@@ -23,7 +23,8 @@
     "# Packages\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from Dimensionality_Reduction_Functions import *"
+    "from sklearn.decomposition import PCA\n",
+    "from Create_Mappings_and_Matrices import *"
    ]
   },
   {
@@ -231,7 +232,12 @@
     }
    ],
    "source": [
-    "y, class_mapping, _, feature_matrices_rescaled, feature_matrix_labels = create_mappings_and_matrices()"
+    "# Create mappings and matrices\n",
+    "y_train, _, class_mapping, _, _, feature_matrices_rescaled_train, _, feature_matrix_labels = create_mappings_and_matrices()\n",
+    "\n",
+    "# Reassign variables\n",
+    "y = y_train\n",
+    "feature_matrices_rescaled = feature_matrices_rescaled_train"
    ]
   },
   {
@@ -239,6 +245,27 @@
    "metadata": {},
    "source": [
     "## Run PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_PCA(X_list, n_components):\n",
+    "  '''\n",
+    "  Takes as input a list of feature matrices and returns a list of PCA objects and a list of transformed feature matrices.\n",
+    "  '''\n",
+    "  pca_list = []\n",
+    "  xpca_list = []\n",
+    "  for X in X_list:\n",
+    "    # PCA\n",
+    "    pca = PCA(n_components=n_components).fit(X) # not using whiten because it isn't rescaling but something else\n",
+    "    X_pca = pca.transform(X)\n",
+    "    pca_list.append(pca)\n",
+    "    xpca_list.append(X_pca)\n",
+    "  return pca_list, xpca_list"
    ]
   },
   {
