--- a/Code/Dimensionality Reduction/tSNE_Train_Set.ipynb
+++ b/Code/Dimensionality Reduction/tSNE_Train_Set.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.manifold import TSNE\n",
-    "from Dimensionality_Reduction_Functions import *"
+    "from Create_Mappings_and_Matrices import *"
    ]
   },
   {
@@ -232,7 +232,13 @@
     }
    ],
    "source": [
-    "y, class_mapping, feature_matrices, feature_matrices_rescaled, feature_matrix_labels = create_mappings_and_matrices()"
+    "# Create mappings and matrices\n",
+    "y_train, _, class_mapping, feature_matrices_train, _, feature_matrices_rescaled_train, _, feature_matrix_labels = create_mappings_and_matrices()\n",
+    "\n",
+    "# Reassign variables\n",
+    "y = y_train\n",
+    "feature_matrices = feature_matrices_train\n",
+    "feature_matrices_rescaled = feature_matrices_rescaled_train"
    ]
   },
   {
