fully setup logistic regression

--- a/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Predictions_Individual_Features_PCA.ipynb
+++ b/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Predictions_Individual_Features_PCA.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Classifier Name\n",
-    "classifier_name = 'All_Data'"
+    "classifier_name = 'Individual_Features_PCA'"
    ]
   },
   {
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "test_data = combine_directory_parquets('../../../Data/Features/All Features/test')\n",
+    "test_data = combine_directory_parquets('../../../Data/Features/All Features Individual Features PCA/test')\n",
     "print('all test data')\n",
     "print(test_data)\n",
     "\n",
