Add Confusion Matrix Function

--- a/Code/Classification/XGBoost/fit_XGBoost_All_data.ipynb
+++ b/Code/Classification/XGBoost/fit_XGBoost_All_data.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# Set classifier name\n",
-    "classifier_name = 'All_Features_PCA'"
+    "classifier_name = 'All_Data'"
    ]
   },
   {
@@ -209,6 +209,7 @@
    "outputs": [],
    "source": [
     "#prepare matrices\n",
+    "sample_data = training_data.sample(frac=0.1)\n",
     "X_train, y_train = prepare_matrices(training_data)"
    ]
   },
