--- a/Code/Classification/XGBoost/fit_XGBoost_All_features_PCA.ipynb
+++ b/Code/Classification/XGBoost/fit_XGBoost_All_features_PCA.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a82021c3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-07T19:25:15.680146Z",
+     "iopub.status.busy": "2024-04-07T19:25:15.679588Z",
+     "iopub.status.idle": "2024-04-07T19:25:16.878242Z",
+     "shell.execute_reply": "2024-04-07T19:25:16.877506Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from XGBoost_Classifier_functions import *"
@@ -12,20 +19,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9200b5b1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-07T19:25:16.880705Z",
+     "iopub.status.busy": "2024-04-07T19:25:16.880489Z",
+     "iopub.status.idle": "2024-04-07T19:25:16.883264Z",
+     "shell.execute_reply": "2024-04-07T19:25:16.882773Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Set classifier name\n",
-    "classifier_name = 'All_Data'"
+    "classifier_name = 'All_Features_PCA'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "52a2e97c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-07T19:25:16.885268Z",
+     "iopub.status.busy": "2024-04-07T19:25:16.884826Z",
+     "iopub.status.idle": "2024-04-07T19:25:16.887271Z",
+     "shell.execute_reply": "2024-04-07T19:25:16.886789Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Sample run or not\n",
@@ -34,10 +55,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "878e4208",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-07T19:25:16.889237Z",
+     "iopub.status.busy": "2024-04-07T19:25:16.888829Z",
+     "iopub.status.idle": "2024-04-07T19:25:20.447918Z",
+     "shell.execute_reply": "2024-04-07T19:25:20.447442Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all training data\n",
+      "           Class                             harmonized_filename  \\\n",
+      "0          Sedan        Sedan_train_orig_train_05967_resized.jpg   \n",
+      "1    Convertible  Convertible_train_orig_train_04167_resized.jpg   \n",
+      "2         Pickup           SUV_train_orig_test_03768_resized.jpg   \n",
+      "3            SUV          SUV_train_orig_train_06972_resized.jpg   \n",
+      "4          Sedan         Sedan_train_orig_test_07188_resized.jpg   \n",
+      "..           ...                                             ...   \n",
+      "370        Sedan         Sedan_train_orig_test_02708_resized.jpg   \n",
+      "371        Sedan         Sedan_train_orig_test_05010_resized.jpg   \n",
+      "372        Sedan        Sedan_train_orig_train_02045_resized.jpg   \n",
+      "373  Convertible   Convertible_train_orig_test_02191_resized.jpg   \n",
+      "374          SUV          SUV_train_orig_train_03426_resized.jpg   \n",
+      "\n",
+      "                                       image_path_blur  \\\n",
+      "0    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "1    ../../../Images/train/Blurred/Convertible_trai...   \n",
+      "2    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
+      "3    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
+      "4    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "..                                                 ...   \n",
+      "370  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "371  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "372  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "373  ../../../Images/train/Blurred/Convertible_trai...   \n",
+      "374  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
+      "\n",
+      "                                    image_path_no_blur  All Features_PCA_0  \\\n",
+      "0    ../../../Images/train/No_Blur/Sedan_train_orig...          -23.909618   \n",
+      "1    ../../../Images/train/No_Blur/Convertible_trai...          -14.863254   \n",
+      "2    ../../../Images/train/No_Blur/SUV_train_orig_t...           14.908620   \n",
+      "3    ../../../Images/train/No_Blur/SUV_train_orig_t...           44.110837   \n",
+      "4    ../../../Images/train/No_Blur/Sedan_train_orig...          -31.029167   \n",
+      "..                                                 ...                 ...   \n",
+      "370  ../../../Images/train/No_Blur/Sedan_train_orig...           -8.679835   \n",
+      "371  ../../../Images/train/No_Blur/Sedan_train_orig...           -7.402995   \n",
+      "372  ../../../Images/train/No_Blur/Sedan_train_orig...            6.262284   \n",
+      "373  ../../../Images/train/No_Blur/Convertible_trai...           -8.890616   \n",
+      "374  ../../../Images/train/No_Blur/SUV_train_orig_t...           23.669039   \n",
+      "\n",
+      "     All Features_PCA_1  All Features_PCA_2  All Features_PCA_3  \\\n",
+      "0             29.438557          -18.057232           -6.858398   \n",
+      "1            -33.795575            6.704316           -3.158926   \n",
+      "2            -10.344370          -11.416114          -11.908539   \n",
+      "3             -8.093269           -8.917087           -0.094118   \n",
+      "4              7.053883           -6.792479           20.170949   \n",
+      "..                  ...                 ...                 ...   \n",
+      "370          -31.299683            6.548144            3.431636   \n",
+      "371          -14.686199           29.797290          -18.989501   \n",
+      "372           -0.539971            2.257778            7.346189   \n",
+      "373          -23.599065           16.108605            0.536330   \n",
+      "374           23.599086          -11.955039          -14.518108   \n",
+      "\n",
+      "     All Features_PCA_4  All Features_PCA_5  ...  All Features_PCA_1490  \\\n",
+      "0              7.423923            6.949106  ...              -0.570319   \n",
+      "1            -12.183828           17.346177  ...               0.007842   \n",
+      "2            -20.397605          -17.925508  ...              -0.955981   \n",
+      "3            -20.195976          -10.885185  ...              -0.656829   \n",
+      "4             -1.882068            4.509104  ...              -0.163666   \n",
+      "..                  ...                 ...  ...                    ...   \n",
+      "370           23.684362           -2.097877  ...               0.404555   \n",
+      "371          -10.983217           -9.291430  ...               0.196036   \n",
+      "372            7.892978          -20.689914  ...               0.908643   \n",
+      "373           15.704367          -13.997748  ...               1.403836   \n",
+      "374           -8.359201           13.597029  ...               2.444439   \n",
+      "\n",
+      "     All Features_PCA_1491  All Features_PCA_1492  All Features_PCA_1493  \\\n",
+      "0                -0.648193               0.866839               0.463851   \n",
+      "1                 0.064884              -0.029359              -0.565206   \n",
+      "2                -1.498257               0.275446               0.106776   \n",
+      "3                 0.067638               0.248604              -0.023210   \n",
+      "4                -0.740593              -1.705062               0.820930   \n",
+      "..                     ...                    ...                    ...   \n",
+      "370               0.580760              -0.222567              -0.323215   \n",
+      "371              -1.255043              -0.064136              -0.114921   \n",
+      "372              -0.303508              -0.340679               0.254506   \n",
+      "373              -0.808677               0.348020              -0.531741   \n",
+      "374              -0.358871               0.471604               1.538652   \n",
+      "\n",
+      "     All Features_PCA_1494  All Features_PCA_1495  All Features_PCA_1496  \\\n",
+      "0                 0.142741               2.237799               0.529876   \n",
+      "1                -0.842227               0.697981               0.473505   \n",
+      "2                -0.853051              -0.028418               0.961415   \n",
+      "3                 1.239787              -0.690067               0.362468   \n",
+      "4                 0.216645              -0.843041              -0.618663   \n",
+      "..                     ...                    ...                    ...   \n",
+      "370               0.302164               0.424973              -0.525406   \n",
+      "371               0.303589               0.710204               0.649833   \n",
+      "372               0.442455              -0.109335              -0.491797   \n",
+      "373               1.303209               0.900787              -1.008661   \n",
+      "374              -0.904930              -0.038521              -0.342573   \n",
+      "\n",
+      "     All Features_PCA_1497  All Features_PCA_1498  All Features_PCA_1499  \n",
+      "0                -0.431530               0.030726               0.054922  \n",
+      "1                -0.617670              -0.189093               0.138331  \n",
+      "2                 0.952704              -0.795340               0.425667  \n",
+      "3                -0.652097               1.067570               0.419579  \n",
+      "4                 0.569885               0.589386              -0.176159  \n",
+      "..                     ...                    ...                    ...  \n",
+      "370              -1.936960              -0.733028               0.686520  \n",
+      "371               0.394949               1.126895              -0.360022  \n",
+      "372               0.614484              -1.066320               0.243007  \n",
+      "373              -0.090444               0.043402              -0.376590  \n",
+      "374              -0.179224               1.191859              -0.381452  \n",
+      "\n",
+      "[6003 rows x 1504 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#load Training data\n",
     "training_data = combine_directory_parquets('../../../Data/Features/All Features All Features PCA/train')\n",
@@ -51,9 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "59126e9f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-07T19:25:20.451347Z",
+     "iopub.status.busy": "2024-04-07T19:25:20.451071Z",
+     "iopub.status.idle": "2024-04-07T19:25:20.547736Z",
+     "shell.execute_reply": "2024-04-07T19:25:20.547254Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#prepare matrices\n",
@@ -62,10 +210,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d797f14b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-07T19:25:20.550904Z",
+     "iopub.status.busy": "2024-04-07T19:25:20.550683Z",
+     "iopub.status.idle": "2024-04-07T20:12:58.551200Z",
+     "shell.execute_reply": "2024-04-07T20:12:58.550685Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/users/ijyliu/conda/envs/scf_general/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time in minutes:  47.619714200496674\n",
+      "Training time per image in minutes:  0.00793265270706258\n",
+      "Train accuracy of best model:  1.0\n",
+      "Mean cross validated accuracy of best model:  0.8189224257563141\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hyperparameters searched:  [{'learning_rate': [0.01, 0.1, 0.3], 'n_estimators': [100, 200], 'max_depth': [3, 6], 'subsample': [0.8, 1], 'colsample_bytree': [0.8, 1]}]\n",
+      "Tuned hyperparameters:  {'colsample_bytree': 0.8, 'learning_rate': 0.3, 'max_depth': 3, 'n_estimators': 200, 'subsample': 0.8}\n"
+     ]
+    }
+   ],
    "source": [
     "fit_xgboost_classifier(X_train, y_train, classifier_name)"
    ]
@@ -87,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
