--- a/Code/Classification/SVM/Fit_SVM_Classifier_All_Data.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_All_Data.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fit Logistic Regression Classifier on All Data"
+    "# Fit SVM Classifier on All Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
       "373                   0.192944                   0.154796  \n",
       "374                   1.680681                   0.007063  \n",
       "\n",
-      "[6003 rows x 11949 columns]\n"
+      "[6003 rows x 4893 columns]\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,21 +236,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hyperparameter settings\n",
-      "[{'solver': ['saga'], 'penalty': [None], 'C': [1], 'class_weight': [None, 'balanced'], 'multi_class': ['ovr', 'multinomial']}, {'solver': ['saga'], 'penalty': ['elasticnet'], 'C': [0.001, 0.01, 0.1, 1, 10, 100], 'l1_ratio': [0.0, 0.25, 0.5, 0.75, 1.0], 'class_weight': [None, 'balanced'], 'multi_class': ['ovr', 'multinomial']}]\n",
-      "training time in minutes:  0.07560424407323202\n",
-      "training time per image in minutes:  0.001260070734553867\n",
-      "train accuracy of best model:  0.8166666666666667\n",
-      "mean cross validated accuracy of best model:  0.7000000000000001\n",
-      "hyperparameters searched:  [{'solver': ['saga'], 'penalty': [None], 'C': [1], 'class_weight': [None, 'balanced'], 'multi_class': ['ovr', 'multinomial']}, {'solver': ['saga'], 'penalty': ['elasticnet'], 'C': [0.001, 0.01, 0.1, 1, 10, 100], 'l1_ratio': [0.0, 0.25, 0.5, 0.75, 1.0], 'class_weight': [None, 'balanced'], 'multi_class': ['ovr', 'multinomial']}]\n",
-      "tuned hyperparameters:  {'C': 1, 'class_weight': None, 'l1_ratio': 1.0, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n"
+      "Training time in minutes:  0.047627496719360354\n",
+      "Training time per image in minutes:  0.0007937916119893393\n",
+      "Train accuracy of best model:  0.6333333333333333\n",
+      "Mean cross validated accuracy of best model:  0.4833333333333333\n",
+      "Hyperparameters searched:  {'c_values': array([  0.1,   1. ,  10. , 100. ]), 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': array([  0.1,   1. ,  10. , 100. ]), 'degree_grid': [2, 3, 5, 7], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 1.0, 'degree': 2, 'gamma': 0.1, 'kernel': 'rbf'}\n"
      ]
     }
    ],
@@ -275,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
