--- a/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fit Logistic Regression Classifier on All Features PCA Data"
+    "# Fit SVM Classifier on All Features PCA Data"
    ]
   },
   {
