--- a/Code/Classification/SVM/SVM_Predictions_All_Data.ipynb
+++ b/Code/Classification/SVM/SVM_Predictions_All_Data.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic Regression Classifier Predictions"
+    "# sVM Classifier Predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
       "91                   1.254761                   0.000000  \n",
       "92                   2.911038                   0.000000  \n",
       "\n",
-      "[1489 rows x 11949 columns]\n"
+      "[1489 rows x 4893 columns]\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,20 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best model\n",
-      "LogisticRegression(C=1, l1_ratio=1.0, max_iter=1000, multi_class='multinomial',\n",
-      "                   penalty='elasticnet', solver='saga')\n",
-      "predictions head\n",
-      "['Sedan' 'Sedan' 'SUV' 'Convertible' 'Sedan']\n",
-      "prediction time in minutes:  0.00015038649241129557\n",
-      "prediction time per image in minutes:  1.0025766160753038e-05\n"
+      "Prediction time in minutes:  9.1552734375e-06\n",
+      "Prediction time per image in minutes:  6.103515625e-07\n"
      ]
     }
    ],
@@ -261,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
